<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:ads="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff">
          
        
           <LinearLayout 
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:gravity="center_horizontal"
              android:paddingBottom="20dp"
              android:paddingLeft="15dp"
              android:paddingRight="15dp"
              android:paddingTop="20dp"
              android:padding="10dip">
       
              <ImageView 
                  
                  android:id="@+id/app_logo"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_centerHorizontal="true"
		        android:src="@drawable/app_logo2"/>
            
                  
             
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_id"
                android:textSize="35sp"
                android:textColor="#000000" />
            <EditText
            
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="20dip"
                android:singleLine="true" />
            
       <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ur_passwd"
                android:textSize="35sp"
                android:textColor="#000000" />
            <EditText
               
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:layout_marginTop="5dip"
                android:singleLine="true" />
            <Button
                android:id="@+id/loginbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/log_btn"
                android:textColor="#000000"
                android:layout_marginBottom="25dp"
                android:layout_centerInParent="true"
                android:background="@drawable/button"
                />
                
          
            <TextView
                android:id="@+id/reglnk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dip"
                android:layout_marginBottom="40dip"
                android:text="@string/reglnk"
                android:textColor="#000000"
                android:textSize="20sp"
                android:gravity="center"/>
            
        </LinearLayout>
            
        
        
        
    
        
    </RelativeLayout>
    
</ScrollView>

